UtahLiveDataTest/src/objects/BudgetPeriod__c.object
<CustomObject>
    <description>[Business] This object stores all Budget Period Details.</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BudgetEndDate__c</fullName>
        <description>This stores Budget End date</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BudgetPeriodTitle__c</fullName>
        <formula>&quot;Fiscal Year(&quot; + TEXT(YEAR(BudgetStartDate__c)) + &quot;-&quot; + TEXT(YEAR( BudgetEndDate__c)) + &quot;)&quot;</formula>
        <label>Budget Period Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetPeriod__c</fullName>
        <formula>IF(AND(NOT(ISBLANK(BudgetStartDate__c )),NOT(ISBLANK(BudgetEndDate__c))),TEXT(MONTH( BudgetStartDate__c ))+&quot;/&quot; +TEXT(DAY(BudgetStartDate__c))+&quot;/&quot; +TEXT(YEAR(BudgetStartDate__c))+&quot;--&quot;+ TEXT(MONTH( BudgetEndDate__c ))+&quot;/&quot; +TEXT(DAY(BudgetEndDate__c))+&quot;/&quot; +TEXT(YEAR(BudgetEndDate__c)),&apos;&apos;)</formula>
        <label>Budget Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BudgetStartDate__c</fullName>
        <description>This stores Budget Start Date</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ChangeRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CodeAndDate__c</fullName>
        <formula>SupportYear__c &amp;&quot;&quot;&amp;&quot;&quot;+&apos;(&apos;+ BudgetPeriod__c +&apos;)&apos;</formula>
        <label>CodeAndDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FundingOpportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Funding Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <description>Logic for Hiding The Edit Button</description>
        <formula>OR(AND(Grant__c!=null, NOT(ISPICKVAL(Grant__r.Status__c, &apos;Draft&apos;))),
   AND(Program__c!=null, NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))),
   AND(FundingOpportunity__c!=null, FundingOpportunity__r.HideEditBtn__c)   
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Logic for Hiding The Edit Button</inlineHelpText>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGrantEditDelete__c</fullName>
        <formula>NOT(ISPICKVAL(Grant__r.Status__c, &apos;Draft&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideGrantEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will determine if the award has been amended.</description>
        <label>Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Stores Budget details in brief.</description>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PaymentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this lookup is created to get the budget periods on the payment request budget grid.</description>
        <label>Payment Request</label>
        <referenceTo>PaymentRequest__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to PreApplication</description>
        <inlineHelpText>Lookup to PreApplication</inlineHelpText>
        <label>PreApplication</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Budget Periods</relationshipLabel>
        <relationshipName>Budget_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SequenceNumber__c</fullName>
        <description>Sequence Number used for identifying the next budget period in Periodic Amendment.</description>
        <label>Sequence Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SupportYear__c</fullName>
        <description>This defines the code of Budget</description>
        <label>Support Year</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <formula>TEXT(YEAR(BudgetStartDate__c))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <label>Budget Period</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000}</displayFormat>
        <label>Budget Period Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>GrantBudgetPeriodEndDate</fullName>
        <active>false</active>
        <errorConditionFormula>IF(AND(Grant__c !=null,OR(BudgetEndDate__c &lt; Grant__r.ProjectPeriodStartDate__c ,  BudgetEndDate__c &gt;
Grant__r.ProjectPeriodEndDate__c )) ,true,false)</errorConditionFormula>
        <errorMessage>Budget Period End Date should be in between Estimated Project Period Start Date and End date of Grant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GrantBudgetPeriodStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND( Grant__c  !=null,OR(BudgetStartDate__c  &lt;  Grant__r.ProjectPeriodStartDate__c ,BudgetStartDate__c &gt; Grant__r.ProjectPeriodEndDate__c )) ,true,false)</errorConditionFormula>
        <errorMessage>Budget Period Start Date should be in between Estimated Project Period Start Date and End date of Grant</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityBudgetPeriodEndDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(  $Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c =&apos;StateasGrantee&apos;,FundingOpportunity__c  !=null,OR(BudgetEndDate__c &lt;  FundingOpportunity__r.EstimatedProjectPeriodStartDate__c  ,  BudgetEndDate__c &gt;
 FundingOpportunity__r.EstimatedProjectPeriodEndDate__c )) ,true,false)</errorConditionFormula>
        <errorMessage>Budget Period End Date should be in between Estimated Project Period Start Date and End date of Opportunity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OpportunityBudgetPeriodStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND($Setup.GNT__UserPreferences__c.GNT__ActiveAppName__c =&apos;StateasGrantee&apos;,FundingOpportunity__c !=null,OR(BudgetStartDate__c &lt;   FundingOpportunity__r.EstimatedProjectPeriodStartDate__c  ,BudgetStartDate__c &gt;  FundingOpportunity__r.EstimatedProjectPeriodEndDate__c  )) ,true,false)</errorConditionFormula>
        <errorMessage>Budget Period Start Date should be in between Estimated Project Period Start Date and End date of Opportunity</errorMessage>
    </validationRules>
</CustomObject>